results/SVCOMP/2-shot/log-Array2-2024_03_18_22_11_18.txt
public class Array2 {

    //@ requires unknown > 0 || unknown <= 0;
    //@ ensures \result == (unknown > 0 ? (arr.length == 1 && arr[0] == 1) : (arr.length == 0));
    public static boolean func(int unknown) {
        int[] arr;
        if (unknown > 0)
            arr = new int[1];
        else
            arr = new int[0];

        if (unknown > 0)
            arr[0] = 1;

        return unknown > 0 ? (arr.length == 1 && arr[0] == 1) : (arr.length == 0);
    }

}
/home/max/Documents/JMLGPT/tmp/Array2.java:4: error: cannot find symbol
    //@ ensures \result == (unknown > 0 ? (arr.length == 1 && arr[0] == 1) : (arr.length == 0));
                                           ^
  symbol:   variable arr
  location: class Array2
/home/max/Documents/JMLGPT/tmp/Array2.java:4: error: cannot find symbol
    //@ ensures \result == (unknown > 0 ? (arr.length == 1 && arr[0] == 1) : (arr.length == 0));
                                                              ^
  symbol:   variable arr
  location: class Array2
/home/max/Documents/JMLGPT/tmp/Array2.java:4: error: cannot find symbol
    //@ ensures \result == (unknown > 0 ? (arr.length == 1 && arr[0] == 1) : (arr.length == 0));
                                                                              ^
  symbol:   variable arr
  location: class Array2
3 errors

